--- a/package.json
+++ b/package.json
@@ -4,9 +4,13 @@
   "private": true,
   "dependencies": {
     "lodash": "^4.17.11",
-    "react": "^16.6.3",
+    "react": "^16.8.6",
     "react-dom": "^16.6.3",
-    "react-scripts": "2.1.1",
+    "react-redux": "^6.0.1",
+    "react-scripts": "^3.0.0",
+    "redux": "^4.0.1",
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.3.0",
     "tachyons": "^4.11.1"
   },
   "scripts": {
